--- a/my-app/index.html
+++ b/my-app/index.html
@@ -1,17 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>ART STICK — Рекламные вывески и короба на заказ</title>
+    <meta
+      name="description"
+      content="ART STICK — изготовление рекламных вывесок, световых коробов, объемных букв и макетов на заказ. Дизайн, производство и монтаж под ключ."
+    />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="ART STICK — Рекламные вывески на заказ"
+    />
+    <meta
+      property="og:description"
+      content="Изготовление рекламных вывесок, световых коробов и макетов под ключ."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://artstick.ru" />
+    <meta property="og:image" content="https://artstick.ru/preview.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="ru_RU" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
-    <title>my-app</title>
   </head>
   <body>
     <div id="root"></div>
