--- a/my-app/index.html
+++ b/my-app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>ART STICK — Рекламные вывески и короба на заказ</title>
+    <title>ART STICK — Рекламные вывески наклейки и короба на заказ</title>
     <meta
       name="description"
       content="ART STICK — изготовление рекламных вывесок, световых коробов, объемных букв и макетов на заказ. Дизайн, производство и монтаж под ключ."
@@ -17,15 +17,15 @@
     />
     <meta
       property="og:description"
-      content="Изготовление рекламных вывесок, световых коробов и макетов под ключ."
+      content="Изготовление рекламных вывесок, световых коробов и макетов под ключ.Дизайн, производство и монтаж."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://artstick.ru" />
-    <meta property="og:image" content="https://artstick.ru/preview.jpg" />
+    <meta property="og:image" content="/logo.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="ru_RU" />
-
+    <link rel="icon" href="/icon.jpg" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
