update linlk and phote and logo

--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>ART STICK — Рекламные вывески наклейки и короба на заказ</title>
+    <title>
+      ART STICK — рекламные вывески, наклейки и световые короба на заказ в
+      Санкт-Петербурге
+    </title>
+
     <meta
       name="description"
-      content="ART STICK — изготовление рекламных вывесок, световых коробов, объемных букв и макетов на заказ. Дизайн, производство и монтаж под ключ."
+      content="ART STICK — изготовление рекламных вывесок, световых коробов, объемных букв и наклеек на заказ в Санкт-Петербурге. Дизайн, производство и монтаж под ключ."
     />
+
+    <!-- GEO -->
+    <meta name="geo.region" content="RU-SPE" />
+    <meta name="geo.placename" content="Санкт-Петербург" />
+    <meta name="geo.position" content="59.9311;30.3609" />
+    <meta name="ICBM" content="59.9311, 30.3609" />
 
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="ART STICK — Рекламные вывески на заказ"
+      content="ART STICK — рекламные вывески в Санкт-Петербурге"
     />
     <meta
       property="og:description"
-      content="Изготовление рекламных вывесок, световых коробов и макетов под ключ.Дизайн, производство и монтаж."
+      content="Изготовление рекламных вывесок, световых коробов и наклеек в Санкт-Петербурге. Дизайн, производство и монтаж под ключ."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://artstick.ru" />
@@ -25,10 +35,17 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="ru_RU" />
+
+    <!-- Favicon -->
     <link rel="icon" href="/icon.jpg" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
       rel="stylesheet"
