--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta property="og:locale" content="ru_RU" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/icon.jpg" />
+    <link rel="icon" type="image/x-icon" href="/icon.ico" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
