--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta
       name="description"
-      content="ART STICK — изготовление рекламных вывесок, световых коробов, объемных букв и наклеек на заказ в Санкт-Петербурге. Дизайн, производство и монтаж под ключ."
+      content="ART STICK — изготовление рекламных вывесок, световых коробов, объемные буквы, наклейки на заказ в Санкт-Петербурге. Дизайн, производство и монтаж под ключ."
     />
 
     <!-- GEO -->
